# Rune

./: .gitignore  CMakeLists.txt
.hermes/plans/: 2026-06-08_rune-architecture.md
cli/: install.sh  package.json  tsconfig.json
cli/src/: index.ts
cli/src/commands/: add.ts  build.ts  dev.ts  doctor.ts  init.ts  run.ts
cli/src/templates/project/: package.json.tmpl  rune.config.json.tmpl  tsconfig.json.tmpl
cli/src/templates/project/public/: index.html.tmpl
cli/src/templates/project/src/: main.ts.tmpl  style.css.tmpl
cli/src/templates/scripts/: run-dev.sh
src/: CMakeLists.txt
src/core/: main.cpp
src/core/handlers/: fs.cpp  fs.hpp  process.cpp  process.hpp
src/ipc/: server.cpp  server.hpp
src/ui/: window.cpp  window.hpp
